--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <h1>Welcome to Index PAGE!</h1>
-
+<br><br>
+<p>Press button below to sign in</p>
+<input type="button" value="Sign In"  onclick="window.location.href='/login'" >
 
 </body>
 </html>
