--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,28 +6,29 @@
 <body>
 <h1>User, welcome spring boot security page!</h1>
 
+<div>
+    <table th:border="2" th:cellpadding="10">
 
-<!--<form th:method="post" th:action="@{/users}" th:object="${user}">-->
-<!--    <input type="hidden" th:field="*{id}">-->
-<!--    <label for="name"> Name: </label>-->
-<!--    <input type="text" th:field="*{name}" , id="name" >-->
-<!--    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" >Name error</div>-->
-<!--    <br/>-->
-<!--    <label for="surname"> Surname: </label>-->
-<!--    <input type="text" th:field="*{surname}" , id="surname">-->
-<!--    <div style="color: red" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" >Surname error</div>-->
-<!--    <br/>-->
-<!--    <label for="age"> Age: </label>-->
-<!--    <input type="number" th:field="*{age}" , id="age">-->
-<!--    <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}" >Age error</div>-->
-<!--    <br/>-->
-<!--    <label for="email"> Email: </label>-->
-<!--    <input type="text" th:field="*{email}" , id="email">-->
-<!--    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}" >Email error</div>-->
-<!--    <br/>-->
-<!--    <input type="submit" value="OK"/>-->
-
+        <tr>
+            <th>Id</th>
+            <th>Age</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Email</th>
+        </tr>
+        <tr th:each ="user : ${userDetails}">
+            <td th:utext="${user.getId}">...</td>
+            <td th:utext="${user.getAge}">...</td>
+            <td th:utext="${user.getName}">...</td>
+            <td th:utext="${user.getSurname}">...</td>
+            <td th:utext="${user.getEmail}">...</td>
+        </tr>
+    </table>
+    <br/>
+    <br/>
+    <br/>
+    <input type="button" value="Logout"  onclick="window.location.href='/logout'"/>
 </form>
-
+</div>
 </body>
 </html>
